2014-08-15  Zalan Bujtas  <zalan@apple.com>

        Do not use FloatRect::infiniteRect() to flag full repaints.
        https://bugs.webkit.org/show_bug.cgi?id=135900

        Reviewed by Simon Fraser.

        Converting FloatRect::infiniteRect() to IntRect leads to value overflow
        and we end up with invalid repaint rectangle. Use a boolean flag to indicate
        full repaint request.

        Covered by existing tests.

        * WebProcess/WebPage/mac/PlatformCALayerRemote.cpp:
        (WebKit::PlatformCALayerRemote::setNeedsDisplayInRect):
        (WebKit::PlatformCALayerRemote::setNeedsDisplay):
        * WebProcess/WebPage/mac/PlatformCALayerRemote.h:
        * WebProcess/WebPage/mac/PlatformCALayerRemoteCustom.h:
        * WebProcess/WebPage/mac/PlatformCALayerRemoteCustom.mm:
        (WebKit::PlatformCALayerRemoteCustom::setNeedsDisplayInRect):
        (WebKit::PlatformCALayerRemoteCustom::setNeedsDisplay):
        * WebProcess/WebPage/mac/PlatformCALayerRemoteTiledBacking.cpp:
        (WebKit::PlatformCALayerRemoteTiledBacking::setNeedsDisplayInRect):
        (WebKit::PlatformCALayerRemoteTiledBacking::setNeedsDisplay):
        * WebProcess/WebPage/mac/PlatformCALayerRemoteTiledBacking.h:

2014-08-15  Alexey Proskuryakov  <ap@apple.com>

        REGRESSION (r172660): WebKit2.TerminateTwice asserts
        https://bugs.webkit.org/show_bug.cgi?id=136012

        * UIProcess/WebPageProxy.cpp: (WebKit::WebPageProxy::terminateProcess):
        Added bug number to a fixme.

2014-08-15  Ryuan Choi  <ryuan.choi@samsung.com>

        Unreviewed build fix on the EFL port since r172635

        * UIProcess/WebPageProxy.cpp: Guard removeNavigationGestureSnapshot with PLATFORM(MAC) macro.
        * UIProcess/WebPageProxy.h: Ditto.
        * UIProcess/efl/WebViewEfl.h: Added didFirstVisuallyNonEmptyLayoutForMainFrame and didFinishLoadForMainFrame as dummy.

2014-08-15  Alexey Proskuryakov  <ap@apple.com>

        Improve page to process relationship tracking