@@ -1,3 +1,14 @@
+2014-08-15  Ryuan Choi  <ryuan.choi@samsung.com>
+
+        [EFL] Add ewk_intro.h to describe main page of doxygen
+        https://bugs.webkit.org/show_bug.cgi?id=136013
+
+        Reviewed by Gyuyoung Kim.
+
+        * PlatformEfl.cmake:
+        * UIProcess/API/efl/EWebKit2.h.in:
+        * UIProcess/API/efl/ewk_intro.h: Added.
+
 2014-08-15  Zalan Bujtas  <zalan@apple.com>
 
         Do not use FloatRect::infiniteRect() to flag full repaints.
